--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="lib/easeljs-0.8.2.combined.js"></script>
     <meta charset="utf-8">
-    <script src="keymaster.js"></script>
     <title></title>
   </head>
   <body>
-<canvas id="game-canvas" width="900px" height="900px">
+    <canvas id="game-canvas" width="900px" height="500px">
   </body>
   <script type="text/javascript" src="lib/bundle.js"></script>
 </html>
