added npc_dots and user_dots

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="lib/easeljs-0.8.2.combined.js"></script>
+    <script src="keymaster.js"></script>
     <meta charset="utf-8">
     <title></title>
   </head>
