--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <script src="lib/easeljs-0.8.2.combined.js"></script>
     <script src="lib/soundjs-0.6.2.combined.js"></script>
+    <link rel="stylesheet" href="css/master.css" type="text/css">
     <script src="keymaster.js"></script>
+
     <meta charset="utf-8">
     <title></title>
   </head>
