--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="lib/easeljs-0.8.2.combined.js"></script>
     <script src="lib/soundjs-0.6.2.combined.js"></script>
     <link rel="stylesheet" href="css/master.css" type="text/css">
-    <script src="keymaster.js"></script>
+    <script src="lib/keymaster.js"></script>
 
     <meta charset="utf-8">
     <title></title>
