--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <script src="lib/easeljs-0.8.2.combined.js"></script>
     <script src="lib/soundjs-0.6.2.combined.js"></script>
     <link rel="stylesheet" href="css/master.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="lib/keymaster.js"></script>
 
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
+    <h1 class="title">Dotty Dots</h1>
     <canvas id="game-canvas" width="900px" height="500px">
+    </canvas>
+    <div class="links">
+      <a href="https://about.me/joshua.yang">About Me</a>
+      <a href="https://github.com/tianjyang/DottyDots">GitHub Repo</a>
+      <a href="https://linkedin.com/in/tianjyang">LinkedIn</a>
+
+    </div>
   </body>
   <script type="text/javascript" src="lib/bundle.js"></script>
 </html>
