added a mute button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="lib/soundjs-0.6.2.combined.js"></script>
     <link rel="stylesheet" href="css/master.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="lib/keymaster.js"></script>
 
     <meta charset="utf-8">
