about to make the game full screen

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
     <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
+    <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
     <link rel="stylesheet" href="css/master.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="lib/keymaster.js"></script>
 
@@ -12,7 +14,11 @@
     <title></title>
   </head>
   <body>
-    <h1 class="title">Dotty Dots</h1>
+    <div class="default-primary-color header">
+      <h1 class="title white-text">Dotty Dots</h1>
+
+    </div>
+
     <canvas id="game-canvas" width="900px" height="500px">
     </canvas>
     <div class="links">
