made the game full screen and applied colors

--- a/index.html
+++ b/index.html
@@ -14,19 +14,8 @@
     <title></title>
   </head>
   <body>
-    <div class="default-primary-color header">
-      <h1 class="title white-text">Dotty Dots</h1>
-
-    </div>
-
-    <canvas id="game-canvas" width="900px" height="500px">
+    <canvas id="game-canvas">
     </canvas>
-    <div class="links">
-      <a href="https://about.me/joshua.yang">About Me</a>
-      <a href="https://github.com/tianjyang/DottyDots">GitHub Repo</a>
-      <a href="https://linkedin.com/in/tianjyang">LinkedIn</a>
-
-    </div>
   </body>
   <script type="text/javascript" src="lib/bundle.js"></script>
 </html>
